# ShadeTorrent

./: .gitignore
.github/workflows/: cmake-multi-platform.yml
ShadeTorrentApi/: CMakeLists.txt  http_server.cpp  http_server.hpp  main.cpp  requests.http  torrent_manager.cpp  torrent_manager.hpp  vcpkg.json
